--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,18 @@
 server.port=12345
 server.context-path=/
 spring.thymeleaf.cache=false
+spring.messages.basename=message/messages
+spring.messages.encoding=utf-8
 #spring.thymeleaf.prefix= classpath:/templates
+
+
+
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=123456
+
+spring.h2.console.settings.web-allow-others=true
+
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto=create
